@@ -132,6 +132,7 @@ PHP_FUNCTION(array_merge);
 PHP_FUNCTION(array_keys);
 PHP_FUNCTION(array_values);
 PHP_FUNCTION(array_count_values);
+PHP_FUNCTION(array_reverse);
 
 #if HAVE_PUTENV
 typedef struct {
